--- a/ReksStyle.css
+++ b/ReksStyle.css
@@ -88,7 +88,7 @@ color: #ffffff !important; font-weight: bold;
 
 
 .DaftarLirikLagu {
-	background-color:#c5e7e3;
+	background-color:#bee2e5;
 	-webkit-border-top-left-radius:1px;
 	-moz-border-radius-topleft:1px;
 	border-top-left-radius:1px;
