--- a/ReksStyle.css
+++ b/ReksStyle.css
@@ -1,7 +1,7 @@
 /*!
- * jQuery Chord Transposer plugin v3.1.1
+ * jQuery ReksStyle plugin v3.1.1
  * Date: Selasa 16 Desember 2016
- * Didit Transpose CSS
+ * Didit GemaPujian CSS
  */
 .toggle_lyrics {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cf0e00), color-stop(1, #f5f5f5) );
@@ -39,11 +39,11 @@
 	background:-moz-linear-gradient( center top, #f5f5f5 5%, #cf0e00 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#cf0e00');
 	background-color:#f5f5f5; color: #ffffff !important;
-}.toggle_lyrics:active {
+}
+.toggle_lyrics:active {
 	position:relative;
 	top:1px;
 }
-
 
 .SongIndex {
 	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -63,7 +63,7 @@
 	-moz-border-radius-bottomleft:1px;
 	border-bottom-left-radius:1px;
 	text-indent:0;
-	border:1px solid #141414;
+	border:1px solid #3d3a3d;
 	display:inline-block;
 	color:#3d3a3d;
 	font-family:arial;
@@ -76,19 +76,21 @@
 	text-decoration:none;
 	text-align:center;
     margin:1px
-}.SongIndex:hover {
+}
+.SongIndex:hover {
 	background-color:#1e62d0; 
 color: #ffffff !important; font-weight: bold;
-	
-}.SongIndex:active {
+}
+.SongIndex:visited { 
+  color: #3d3a3d;	
+}
+.SongIndex:active {
 	position:relative;
 	top:1px;
 }
 
-
-
 .DaftarLirikLagu {
-	background-color:#bee2e5;
+	background-color:#ffffff;
 	-webkit-border-top-left-radius:1px;
 	-moz-border-radius-topleft:1px;
 	border-top-left-radius:1px;
@@ -102,9 +104,9 @@ color: #ffffff !important; font-weight: bold;
 	-moz-border-radius-bottomleft:1px;
 	border-bottom-left-radius:1px;
 	text-indent:0;
-	border:1px solid #000000;
+	border:1px solid #3d3a3d;
 	display:inline-block;
-	color:#0400ff;
+	color:#3d3a3d !important;
 	font-family:arial;
 	font-size:15px;
 	font-weight:normal;
@@ -117,9 +119,10 @@ color: #ffffff !important; font-weight: bold;
     margin:1px
 }
 .DaftarLirikLagu:hover {
- background-color:#b37604;color: #ffffff; font-weight: normal;
+ background-color:#b37604;color: #ffffff !important; font-weight: normal;
 }
+.DaftarLirikLagu:visited { 
+  color: #3d3a3d;
 .DaftarLirikLagu:active {
  position:relative;
-top:1px;
-}
+top:1px;}
