--- a/ReksStyle.css
+++ b/ReksStyle.css
@@ -7,7 +7,7 @@
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cf0e00), color-stop(1, #f5f5f5) );
 	background:-moz-linear-gradient( center top, #cf0e00 5%, #f5f5f5 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#cf0e00', endColorstr='#f5f5f5');
-	background-color:#cf0e00;
+	background-color:#ffffff;
 	-webkit-border-top-left-radius:12px;
 	-moz-border-radius-topleft:12px;
 	border-top-left-radius:12px;
