--- a/DaftarLirikLagu.css
+++ b/DaftarLirikLagu.css
@@ -1,3 +1,8 @@
+/*!
+ * jQuery ReksStyle plugin v3.1.1
+ * Date: Selasa 16 Desember 2016
+ * Didit GemaPujian CSS
+ */
 .DaftarLirikLagu {
 	background-color:#C0C0C0;
 	-webkit-border-top-left-radius:1px;
