--- a/ReksStyle.css
+++ b/ReksStyle.css
@@ -86,7 +86,7 @@ color: #ffffff !important; font-weight: bold;
 }
 
 .DaftarLirikLagu {
-	background-color:#C0C0C0;
+	background-color:#c0c0c0;
 	-webkit-border-top-left-radius:1px;
 	-moz-border-radius-topleft:1px;
 	border-top-left-radius:1px;
