--- a/ReksStyle.css
+++ b/ReksStyle.css
@@ -46,7 +46,7 @@
 }
 
 .SongIndex {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-moz-box-shadow:inset 0px 1px 0px 0px #C0C0C0;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background-color:#d4f30b;
