--- a/ReksStyle.css
+++ b/ReksStyle.css
@@ -77,7 +77,7 @@
 	text-align:center;
     margin:1px
 }.SongIndex:hover {
-	background-color:#1e62d0; 
+	background-color:#141415; 
 color: #ffffff !important; font-weight: bold;
 	
 }.SongIndex:active {
