--- a/ReksTrans.css
+++ b/ReksTrans.css
@@ -13,7 +13,7 @@ font-size:18px;
 .transpose-keys a {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0) );
 	background:-moz-linear-gradient( center top, #3d94f6 5%, #1e62d0 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0');
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=&#39;#3d94f6&#39;, endColorstr=&#39;#1e62d0&#39;);
 	background-color:#3d94f6;
 	-webkit-border-top-left-radius:3px;
 	-moz-border-radius-topleft:3px;
@@ -44,7 +44,7 @@ font-size:18px;
 .transpose-keys a:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
 	background:-moz-linear-gradient( center top, #fb9e25 5%, #ffc477 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9e25', endColorstr='#ffc477');
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=&#39;#fb9e25&#39;, endColorstr=&#39;#ffc477&#39;);
 	background-color:#fb9e25; font-weight: bold;
 }
 .transpose-keys a:active {
