--- a/ReksTrans.css
+++ b/ReksTrans.css
@@ -30,7 +30,7 @@ font-size:14px;
 	text-indent:0;
 	border:1px solid #284061;
 	display:inline-block;
-	color:#ffffff;
+	color:#000000;
 	font-family:Arial;
 	font-size:13px;
 	font-weight:normal;
