--- a/ReksStyle.css
+++ b/ReksStyle.css
@@ -205,7 +205,7 @@ color: #ffffff !important; font-weight: bold;
 	text-indent:0;
 	border:1px solid #284061;
 	display:inline-block;
-	color:#ffffff;
+	color:#000000;
 	font-family:Arial;
 	font-size:18px;
 	font-weight:normal;
