--- a/ReksTrans.css
+++ b/ReksTrans.css
@@ -14,7 +14,7 @@ font-size:14px;
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, aqua), color-stop(1, white) );
 	background:-moz-linear-gradient( center top, #3d94f6 5%, #1e62d0 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=&#39;#3d94f6&#39;, endColorstr=&#39;#1e62d0&#39;);
-	background-color:#3d94f6;
+	background-color:#00FFFF;
 	-webkit-border-top-left-radius:3px;
 	-moz-border-radius-topleft:3px;
 	border-top-left-radius:3px;
