--- a/ReksTrans.css
+++ b/ReksTrans.css
@@ -11,10 +11,10 @@ font-family: monospace;
 font-size:14px;
 }
 .transpose-keys a {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, aqua), color-stop(1, white) );
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #ffffff) );
 	background:-moz-linear-gradient( center top, #3d94f6 5%, #1e62d0 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=&#39;#3d94f6&#39;, endColorstr=&#39;#1e62d0&#39;);
-	background-color:#00FFFF;
+	background-color:#3d94f6;
 	-webkit-border-top-left-radius:3px;
 	-moz-border-radius-topleft:3px;
 	border-top-left-radius:3px;
@@ -32,7 +32,7 @@ font-size:14px;
 	display:inline-block;
 	color:#000000;
 	font-family:Arial;
-	font-size:13px;
+	font-size:15px;
 	font-weight:normal;
 	font-style:normal;
 	height:28px;
@@ -53,5 +53,5 @@ font-size:14px;
 }
 .transpose-keys a.selected { 
   background: #f24537; 
-  color: #000000;
+  color: #ffffff; font-weight: bold;
 }
